[workspace]
members = ["engine", "renderer"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Shashank Singh <sshashank124@gmail.com>"]
repository = "https://github.com/sshashank124/rayge"

[workspace.dependencies]
renderer = { path = "renderer" }
thiserror = "2"

[workspace.lints.clippy]
all = "warn"
complexity = "warn"
pedantic = "warn"
perf = "warn"
nursery = "warn"
suspicious = "warn"
cast_possible_truncation = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
