[package]
name = "renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ash = "0.38"
raw-window-handle = "*"
thiserror = { workspace = true }
vk-mem = "0.4"

[target.'cfg(target_os="macos")'.dependencies]
raw-window-metal = "*"

[lints]
workspace = true
