[package]
name = "renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
debug-names = []

[dependencies]
ash = "0.38"
raw-window-handle = "*"
thiserror = { workspace = true }
tracing = { workspace = true }
vk-mem = "0.4"

[lints]
workspace = true
